# hs-marlin-gcode

./: .gitignore  .prettierrc.json  API.md  CHANGELOG.md  README.md  justfile  marlin-gcode.cabal  package-lock.json  package.json  spec.json
assets/: spec.json
renders/: index.json  triangle.gcode
scripts/: gen-docs.js  gen.js  update-readme.js
src/Marlin/: GCode.hs
src/Marlin/GCode/: Generated.hs  Types.hs
src/Marlin/GCode/Class/: Default.hs  Upcast.hs
test/: Example.hs  Main.hs
