cabal-version: 3.0

name: marlin-gcode
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
author: Michael Bock
maintainer: no-day@posteo.net
build-type: Simple
extra-doc-files: CHANGELOG.md

common common-opts
  ghc-options: -Wall
  default-extensions:
    AllowAmbiguousTypes
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DerivingVia
    DuplicateRecordFields
    FlexibleInstances
    FlexibleContexts
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    KindSignatures
    NoImplicitPrelude
    TypeApplications
    TypeOperators
    LambdaCase
    OverloadedStrings
    OverloadedRecordDot
    
library
  import: common-opts
  exposed-modules: Marlin.GCode
  other-modules:
    Marlin.GCode.Class.Default
    Marlin.GCode.Class.Upcast
    Marlin.GCode.Generated
    Marlin.GCode.Types

  build-depends:
    base ^>=4.17.2.1,
    relude,

  hs-source-dirs: src
  default-language: Haskell2010

executable example
  import: common-opts
  default-language: Haskell2010
  ghc-options: -Wno-ambiguous-fields
  hs-source-dirs: test
  main-is: Example.hs
  build-depends:
    base ^>=4.17.2.1,
    marlin-gcode,
    relude,

test-suite marlin-gcode-test
  import: common-opts
  ghc-options: -Wno-ambiguous-fields
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base ^>=4.17.2.1,
    marlin-gcode,
    relude,
    tasty,
    tasty-hunit,
